General shaping of itinerary done

--- a/itinerary.html
+++ b/itinerary.html
@@ -7,14 +7,46 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <script src="script.js"></script>
     <div class="itinerary-container">
         <h1>Itinerary</h1>
         <h2>2.15.2024</h2>
+        <div class="spacer"></div>
         <div class="itinerary">
-            <p><span class="place">Place Name 1</span><span class="dots"></span><span class="time">8:00 PM</span></p>
-            <p><span class="place">Place Name 2</span><span class="dots"></span><span class="time">9:00 PM</span></p>
-            <!-- Add more places and times as needed -->
+            <div class="item">
+                <span class="place">Place Name 1</span>
+                <span class="dots"></span>
+                <span class="time">8:00 PM</span>
+            </div>
+            <div class="item">
+                <span class="place">Place Name</span>
+                <span class="dots"></span>
+                <span class="time">9:00 PM</span>
+            </div>
+            <div class="item">
+                <span class="place">Place Name</span>
+                <span class="dots"></span>
+                <span class="time">9:00 PM</span>
+            </div>
+            <div class="item">
+                <span class="place">Place Name</span>
+                <span class="dots"></span>
+                <span class="time">9:00 PM</span>
+            </div>
+            <div class="item">
+                <span class="place">Place Name</span>
+                <span class="dots"></span>
+                <span class="time">9:00 PM</span>
+            </div>
+            <div class="item">
+                <span class="place">Place Name</span>
+                <span class="dots"></span>
+                <span class="time">9:00 PM</span>
+            </div>
+
+            <!-- Additional items as needed -->
         </div>
+        
     </div>
 </body>
 </html>
