fixed styling of places, added background

--- a/itinerary.html
+++ b/itinerary.html
@@ -24,27 +24,25 @@
                 <span class="time">9:00 PM</span>
             </div>
             <div class="item">
-                <span class="place">Place Name</span>
+                <span class="place">Place Name2</span>
                 <span class="dots"></span>
                 <span class="time">9:00 PM</span>
             </div>
             <div class="item">
-                <span class="place">Place Name</span>
+                <span class="place">Place Name2</span>
                 <span class="dots"></span>
                 <span class="time">9:00 PM</span>
             </div>
             <div class="item">
-                <span class="place">Place Name</span>
+                <span class="place">Place Name2</span>
                 <span class="dots"></span>
                 <span class="time">9:00 PM</span>
             </div>
             <div class="item">
-                <span class="place">Place Name</span>
+                <span class="place">Place Name22222</span>
                 <span class="dots"></span>
                 <span class="time">9:00 PM</span>
             </div>
-
-            <!-- Additional items as needed -->
         </div>
         
     </div>
