started background js

--- a/itinerary.html
+++ b/itinerary.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <script src="script.js"></script>
+    <script src="emojiRainItinerary.js"></script>
     <div class="itinerary-container">
         <h1>Itinerary</h1>
         <h2>2.15.2024</h2>
