--- a/itinerary.html
+++ b/itinerary.html
@@ -9,41 +9,60 @@
 <body>
     <script src="script.js"></script>
     <script src="emojiRainItinerary.js"></script>
+    <script>
+        startEmojiRainItinerary();
+    </script>
     <div class="itinerary-container">
         <h1>Itinerary</h1>
         <h2>2.15.2024</h2>
         <div class="spacer"></div>
         <div class="itinerary">
             <div class="item">
-                <span class="place">Place Name 1</span>
+                <span class="place">😴 sleeping in</span>
                 <span class="dots"></span>
-                <span class="time">8:00 PM</span>
+                <span class="time">11:00 AM</span>
             </div>
             <div class="item">
-                <span class="place">Place Name</span>
+                <span class="place">🍗 phat hen</span>
                 <span class="dots"></span>
-                <span class="time">9:00 PM</span>
+                <span class="time">12:00 PM</span>
             </div>
             <div class="item">
-                <span class="place">Place Name2</span>
+                <span class="place">🌿 botanical bitch</span>
                 <span class="dots"></span>
-                <span class="time">9:00 PM</span>
+                <span class="time">2:30 PM</span>
             </div>
             <div class="item">
-                <span class="place">Place Name2</span>
+                <span class="place">🚶‍♂️ walk n shop</span>
                 <span class="dots"></span>
-                <span class="time">9:00 PM</span>
+                <span class="time">3:30 PM</span>
             </div>
             <div class="item">
-                <span class="place">Place Name2</span>
+                <span class="place">🍣 omakase</span>
                 <span class="dots"></span>
-                <span class="time">9:00 PM</span>
+                <span class="time">5:00 PM</span>
             </div>
             <div class="item">
-                <span class="place">Place Name22222</span>
+                <span class="place">🍩 ballard + hot cake</span>
                 <span class="dots"></span>
-                <span class="time">9:00 PM</span>
+                <span class="time">8:30 PM</span>
             </div>
+            <div class="item">
+                <span class="place">🛌 cozy up</span>
+                <span class="dots"></span>
+                <span class="time">9:30 PM</span>
+            </div>
+            <div class="item">
+                <span class="place">📲 order in (optional)</span>
+                <span class="dots"></span>
+                <span class="time">10:00 PM</span>
+            </div>
+            <div class="item">
+                <span class="place">🎬 film (optional)</span>
+                <span class="dots"></span>
+                <span class="time">10:30 PM</span>
+            </div>
+            
         </div>
         
     </div>
