cleaned up comments

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
             <button id="yesButton">Yes!</button>
         </div>
     </div>
-    <script src="script.js"></script> <!-- Link to JavaScript file -->
+    <script src="script.js"></script>
 </body>
 </html>
